--- a/index.HTML
+++ b/index.HTML
@@ -30,17 +30,19 @@
     <!-- id is price as that is our second input variable -->
       
 
-    <button onclick="getShoe()">Pick my Shoe!</button>
+    <button onclick="displayImage()">Pick my Shoe!</button>
 <!--  after inputing information clicking the button will determine what shoe you are assigned -->
     <div class="outputBox">
-      <h2>Admit One</h2>
-  	  <img width="20%"src="qr.png">
+      <h2>View your shoe below!</h2>
+  	  <img width="60%" src="" id="images">
 		  <p id="output"> </p>
 	  </div>
       <p id="feedback"> </p>
-  </center>
+ 
     <script src="script.js"></script>
     <!-- linked together so our files are connected -->
 
+    <h2></h2>
+  </center>
   </body>
 </html>
