--- a/index.HTML
+++ b/index.HTML
@@ -28,7 +28,7 @@
     <label>Price of Shoe: </label>
     <input type="text" id="price"><br><br>
 <!-- id is price, it is our second input variable and will be displayed on the website screen by Price of Shoe: -->
-      
+      <!-- Id's allow us to refer back to specific elements -->
 
     <button onclick="displayImage()">Pick my Shoe!</button>
 <!--  after inputing information clicking the button will determine what shoe you are assigned -->
